<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/charcoal"
        android:layout_alignParentTop="true"
        android:id="@+id/main_menu_action_bar">
    </LinearLayout>

    <ImageView
        android:layout_below="@id/main_menu_action_bar"
        android:id="@+id/menu_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/menu_map" />

    <Button
        android:layout_below="@id/menu_map"
        android:id="@+id/main_menu_map_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="FIND" >
    </Button>

    <LinearLayout
        android:id="@+id/current_person_main_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_menu_map_button"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/blue_marker_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_action_location_blue" />

        <TextView
            android:id="@id/blue_marker_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/action_blue_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/private_liquor_store_main_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_person_main_holder"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/red_marker_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_action_location_red" />

        <TextView
            android:id="@id/red_marker_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/action_red_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BC_liquor_store_main_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/private_liquor_store_main_holder"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/green_marker_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_action_location_green" />

        <TextView
            android:id="@id/green_marker_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/action_green_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_menu_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BC_liquor_store_main_holder"
        android:layout_below="@id/BC_liquor_store_main_holder"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_help"
            android:textSize="10sp" />
    </LinearLayout>

</RelativeLayout>